demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-ns
spec:
  selector:
    app: demo-app
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
