hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: demo-app
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
