php-apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: demo-ns
spec:
  selector:
    app: php-apache
  ports:
    - port: 80
      targetPort: 80
