service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: demo-app
spec:
  selector:
    app: hello
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
